<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/todayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_10_2021"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"/>


    <TextView
        android:id="@+id/labelStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/timeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/labelStart"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:text="@string/timeStart"
        app:layout_constraintTop_toTopOf="@id/labelStart"/>

    <TextView
        android:id="@+id/labelEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/labelStart"
        app:layout_constraintTop_toBottomOf="@id/labelStart"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/timeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/timeEnd"
        app:layout_constraintStart_toStartOf="@id/timeStart"
        app:layout_constraintTop_toTopOf="@id/labelEnd"
        />

    <EditText
        android:id="@+id/titleTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
       android:hint="@string/title"
        app:layout_constraintStart_toStartOf="@id/labelEnd"
        app:layout_constraintTop_toBottomOf="@id/labelEnd"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descriptionTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTask"
        />

    <Button
        android:id="@+id/saveTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        android:text="@string/save_data"/>


</androidx.constraintlayout.widget.ConstraintLayout>