<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/_16_00"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/delimiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toTopOf="@id/start"
        android:src="@drawable/ic_baseline_remove_24"
        android:contentDescription="@string/delimeter" />

    <TextView
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_17_00"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/delimiter"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/task_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_task_1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/start"/>

    <TextView
        android:id="@+id/task_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/task_label"
        app:layout_constraintTop_toBottomOf="@id/task_label"
        android:text="@string/description_of_my_business"/>

    <ImageView
        android:id="@+id/alarm_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/task_desc"
        android:layout_marginTop="4dp"
        android:visibility="visible"
        android:src="@drawable/notification_alert_calendar_10"
        android:contentDescription="@string/alarm_icon" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarm_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:layout_marginTop="2dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>